--- a/public/output.css
+++ b/public/output.css
@@ -8,9 +8,12 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-400: oklch(70.4% 0.191 22.216);
+    --color-gray-700: oklch(37.3% 0.034 259.733);
     --color-black: #000;
     --color-white: #D9CBB3;
     --spacing: 0.25rem;
+    --text-sm: 0.875rem;
+    --text-sm--line-height: calc(1.25 / 0.875);
     --text-lg: 1.125rem;
     --text-lg--line-height: calc(1.75 / 1.125);
     --text-xl: 1.25rem;
@@ -37,6 +40,7 @@
     --default-mono-font-family: var(--font-mono);
     --color-neutral: #1C2317;
     --color-main: #99582a;
+    --color-maind: #522500;
     --color-accents: #3A5F0B;
     --font-main: "Pacifico", sans-serif;
     --font-sec: "Borel", sans-serif;
@@ -265,6 +269,9 @@
   .mt-4 {
     margin-top: calc(var(--spacing) * 4);
   }
+  .mt-5 {
+    margin-top: calc(var(--spacing) * 5);
+  }
   .mt-6 {
     margin-top: calc(var(--spacing) * 6);
   }
@@ -282,6 +289,9 @@
   }
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
+  }
+  .mb-12 {
+    margin-bottom: calc(var(--spacing) * 12);
   }
   .ml-1 {
     margin-left: calc(var(--spacing) * 1);
@@ -321,6 +331,9 @@
     width: calc(var(--spacing) * 6);
     height: calc(var(--spacing) * 6);
   }
+  .h-12 {
+    height: calc(var(--spacing) * 12);
+  }
   .h-16 {
     height: calc(var(--spacing) * 16);
   }
@@ -329,6 +342,9 @@
   }
   .h-24 {
     height: calc(var(--spacing) * 24);
+  }
+  .h-28 {
+    height: calc(var(--spacing) * 28);
   }
   .h-64 {
     height: calc(var(--spacing) * 64);
@@ -407,6 +423,18 @@
     --tw-scale-x: 105%;
     --tw-scale-y: 105%;
     --tw-scale-z: 105%;
+    scale: var(--tw-scale-x) var(--tw-scale-y);
+  }
+  .scale-150 {
+    --tw-scale-x: 150%;
+    --tw-scale-y: 150%;
+    --tw-scale-z: 150%;
+    scale: var(--tw-scale-x) var(--tw-scale-y);
+  }
+  .scale-250 {
+    --tw-scale-x: 250%;
+    --tw-scale-y: 250%;
+    --tw-scale-z: 250%;
     scale: var(--tw-scale-x) var(--tw-scale-y);
   }
   .transform {
@@ -544,6 +572,9 @@
   .bg-main {
     background-color: var(--color-main);
   }
+  .bg-maind {
+    background-color: var(--color-maind);
+  }
   .bg-neutral {
     background-color: var(--color-neutral);
   }
@@ -591,6 +622,9 @@
   }
   .py-32 {
     padding-block: calc(var(--spacing) * 32);
+  }
+  .pt-2 {
+    padding-top: calc(var(--spacing) * 2);
   }
   .pt-3 {
     padding-top: calc(var(--spacing) * 3);
@@ -648,6 +682,10 @@
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
   }
+  .text-sm {
+    font-size: var(--text-sm);
+    line-height: var(--tw-leading, var(--text-sm--line-height));
+  }
   .text-xl {
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
@@ -696,6 +734,9 @@
   .text-main {
     color: var(--color-main);
   }
+  .text-maind {
+    color: var(--color-maind);
+  }
   .text-neutral {
     color: var(--color-neutral);
   }
@@ -722,6 +763,9 @@
   }
   .underline-offset-2 {
     text-underline-offset: 2px;
+  }
+  .underline-offset-4 {
+    text-underline-offset: 4px;
   }
   .caret-accents {
     caret-color: var(--color-accents);
@@ -763,6 +807,18 @@
   }
   .outline-accents {
     outline-color: var(--color-accents);
+  }
+  .outline-black {
+    outline-color: var(--color-black);
+  }
+  .outline-gray-700 {
+    outline-color: var(--color-gray-700);
+  }
+  .outline-gray-700\/80 {
+    outline-color: color-mix(in srgb, oklch(37.3% 0.034 259.733) 80%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      outline-color: color-mix(in oklab, var(--color-gray-700) 80%, transparent);
+    }
   }
   .outline-main {
     outline-color: var(--color-main);
